# alg_meth

./: .gitignore  .gitmodules  CMakeLists.txt  lesson_4.1.h  lesson_4.2.h  lesson_4.3.h  lesson_6.4.h  main.cpp
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  fibonacci.h  lesson_6.1.h  lesson_6.5.h  lesson_6.8.h  main.cpp  utils.h
test/: CMakeLists.txt  main.cpp
test/resources/: sequences.h
test/src/: lesson_6.5.cpp  quick_sork.cpp
